# quoth

./: Cargo.toml  LICENSE  README.md
src/: config.rs  errors.rs  main.rs  quoth.yml  utils.rs
src/quoth/: database.rs  metadata.rs  mod.rs  quotes.rs  stats.rs
