[package]
name = "quoth"
version = "0.1.0"
edition = "2018"
authors = ["Ninjani"]

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "*"
console = "0.6.1"
serde = "1.0"
serde_json = "*"
serde_derive = "*"
sled = "0.15.17"
failure = "0.1.2"
rand = "0.5.5"
chrono-english = "0.1.3"
itertools = "0.7.8"
textwrap = { version = "0.10.0", features = ["term_size"] }
regex = "1.0.5"
csv = "1.0.2"
path_abs = "0.4.1"
dirs = "*"

[profile.release]
lto = true
panic = 'abort'