[package]
name = "quoth"
version = "0.1.0"
edition = "2018"
authors = ["Ninjani"]

[dependencies]
clap = {version = "2.32", features = ["yaml"]}
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.3.0"
console = "0.7.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sled = "0.15"
failure = "0.1.5"
rand = "0.6.4"
chrono-english = "0.1.4"
itertools = "0.8.0"
textwrap = { version = "0.11.0", features = ["term_size"] }
regex = "1.1.0"
csv = "1.0.5"
path_abs = "0.4.1"
dirs = "1.0.4"

