[package]
name = "quoth"
version = "0.2.0"
edition = "2018"
authors = ["Ninjani"]

[dependencies]
clap = {version = "2.32", features = ["yaml"]}
chrono = { version = "0.4.9", features = ["serde"] }
dialoguer = "0.4.0"
console = "0.9.0"
serde = "1.0"
serde_json = "1.0.41"
serde_derive = "1.0.101"
sled = "0.28.0"
rand = "0.7.2"
chrono-english = "0.1.4"
itertools = "0.8.0"
textwrap = { version = "0.11.0", features = ["term_size"] }
regex = "1.3.1"
csv = "1.0.5"
path_abs = "0.5.0"
dirs = "2.0.2"
tui = "0.6.2"
termion = "1.5.3"
thiserror = "1.0"
anyhow = "1.0.11"
bincode = "1.2.0"